Update Meal on progress

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,7 +1,7 @@
 /* Basic Grey */
 
 .basic-grey {
-    width: 400px;
+    width: 600px;
     margin-right: auto;
     margin-left: auto;
     margin-top: 150px;
@@ -36,7 +36,7 @@
     margin-top: 10px;
     color: #888;
 }
-.basic-grey input[type="text"], .basic-grey input[type="password"], .basic-grey textarea,.basic-grey select{
+.basic-grey input[type="text"], .basic-grey input[type="password"], input[type="datetime"], .basic-grey textarea,.basic-grey select{
     border: 1px solid #DADADA;
     color: #888;
     height: 24px;
@@ -72,7 +72,7 @@
     border: none;
     padding: 7px 21px 6px 24px;
     color: #FFF;
-    margin-left: 281px;
+    margin-left: 515px;
     text-decoration: none;
     font: normal 12px/12px Georgia, "Times New Roman", Times, serif;
 }
@@ -84,3 +84,4 @@
     background: #CF7A7A
 
 }
+
