--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,17 +1,18 @@
 /* Basic Grey */
 
 .basic-grey {
-    width: 700px;
+    width: 828px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 150px;
+    margin-top: 40px;
     background: #EEE;
     padding: 20px 30px 20px 30px;
     font: 12px Georgia, "Times New Roman", Times, serif;
     color: #888;
     text-shadow: 1px 1px 1px #FFF;
-    border:1px solid #DADADA;
+    border: 1px solid #DADADA;
 }
+
 .basic-grey h1 {
     font: 25px Georgia, "Times New Roman", Times, serif;
     padding: 0px 0px 10px 40px;
@@ -20,14 +21,17 @@
     margin: -10px -30px 30px -30px;
     color: #888;
 }
+
 .basic-grey h1>span {
     display: block;
     font-size: 11px;
 }
+
 .basic-grey label {
     display: block;
     margin: 0px 0px 5px;
 }
+
 .basic-grey label>span {
     float: left;
     width: 80px;
@@ -36,7 +40,8 @@
     margin-top: 10px;
     color: #888;
 }
-.basic-grey input[type="text"], .basic-grey input[type="password"], input[type="datetime"], .basic-grey textarea,.basic-grey select{
+
+.basic-grey input[type="text"], .basic-grey input[type="password"], input[type="datetime"], .basic-grey textarea, .basic-grey select {
     border: 1px solid #DADADA;
     color: #888;
     height: 24px;
@@ -48,22 +53,25 @@
     width: 72%;
     font: normal 12px/12px Georgia, "Times New Roman", Times, serif;
 }
+
 .basic-grey select {
-    appearance:none;
-    -webkit-appearance:none;
+    appearance: none;
+    -webkit-appearance: none;
     -moz-appearance: none;
     text-indent: 0.01px;
     text-overflow: '';
     width: 72%;
     height: 30px;
 }
-.basic-grey textarea{
-    height:100px;
+
+.basic-grey textarea {
+    height: 100px;
 }
 
-.tableForm{
+.tableForm {
     width: 170px;
 }
+
 .basic-grey .button {
     background: #E48F8F;
     border: none;
@@ -76,16 +84,130 @@
     border: none;
     padding: 7px 21px 6px 24px;
     color: #FFF;
-    margin-left: 515px;
+    margin-left: 732px;
     text-decoration: none;
     font: normal 12px/12px Georgia, "Times New Roman", Times, serif;
 }
+
 .basic-grey .button:hover {
     background: #CF7A7A
 }
+
 .basic-grey .link:hover {
     text-decoration: none;
     background: #CF7A7A
 
 }
 
+table a:link {
+    color: #666;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+table a:visited {
+    color: #999999;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+table a:active,
+table a:hover {
+    color: #bd5a35;
+    text-decoration: underline;
+}
+
+table {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #666;
+    font-size: 12px;
+    text-shadow: 1px 1px 0px #fff;
+    background: #eaebec;
+    margin: 20px;
+    border: #ccc 1px solid;
+
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+
+    -moz-box-shadow: 0 1px 2px #d1d1d1;
+    -webkit-box-shadow: 0 1px 2px #d1d1d1;
+    box-shadow: 0 1px 2px #d1d1d1;
+}
+
+table th {
+    padding: 21px 25px 22px 25px;
+    border-top: 1px solid #fafafa;
+    border-bottom: 1px solid #e0e0e0;
+
+    background: #ededed;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
+    background: -moz-linear-gradient(top, #ededed, #ebebeb);
+}
+
+table th:first-child {
+    text-align: left;
+    padding-left: 20px;
+}
+
+table tr:first-child th:first-child {
+    -moz-border-radius-topleft: 3px;
+    -webkit-border-top-left-radius: 3px;
+    border-top-left-radius: 3px;
+}
+
+table tr:first-child th:last-child {
+    -moz-border-radius-topright: 3px;
+    -webkit-border-top-right-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
+table tr {
+    text-align: center;
+    padding-left: 20px;
+}
+
+table td:first-child {
+    text-align: left;
+    padding-left: 20px;
+    border-left: 0;
+}
+
+table td {
+    padding: 18px;
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #e0e0e0;
+    border-left: 1px solid #e0e0e0;
+
+    background: #fafafa;
+    background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
+    background: -moz-linear-gradient(top, #fbfbfb, #fafafa);
+}
+
+table tr.even td {
+    background: #f6f6f6;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f6f6f6));
+    background: -moz-linear-gradient(top, #f8f8f8, #f6f6f6);
+}
+
+table tr:last-child td {
+    border-bottom: 0;
+}
+
+table tr:last-child td:first-child {
+    -moz-border-radius-bottomleft: 3px;
+    -webkit-border-bottom-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+table tr:last-child td:last-child {
+    -moz-border-radius-bottomright: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+table tr:hover td {
+    background: #f2f2f2;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
+    background: -moz-linear-gradient(top, #f2f2f2, #f0f0f0);
+}
